# nb_sisso

./: LICENSE  MANIFEST.in  README.md  README_jp.md  log_progress.py  make_cache.py  model_score_1d.py  model_score_2d.py  nb_SIS.py  nb_SO.py  pyproject.toml  score_funcs_1d.py  score_funcs_2d.py  score_funcs_nd.py  utils.py
cache_folder/: cache_2.npz  cache_4.npz  cache_5.npz  make_cache.py  need_calc_change_x_1.npz  need_calc_change_x_3.npz  num_to_index_1.npz  num_to_index_2.npz
info/: README_jp.md  SIS_1.drawio  SIS_2.drawio  SIS_info.md  SIS_info_jp.md  how_to_use.ipynb  how_to_use_jp.ipynb
src/: model_score_2d.py  nb_SO.py
src/nb_sisso/: __init__.py  log_progress.py  model_score_1d.py  model_score_2d.py  nb_SIS.py  nb_SO.py  score_funcs_nd.py  utils.py
src/nb_sisso/cache_folder/: .gitattributes  arr_len.npy  auto.py  cache_1.npz  cache_2.npz  cache_3.npz  cache_4.npz  cache_5.npz  check_change_x_ones_1.npz  check_change_x_ones_2.npz  check_change_x_ones_3.npz  check_change_x_ones_4.npz  check_change_x_ones_5.npz  check_change_x_ones_6.npz  check_change_x_tot_0.npz  info_utils_for_make_cache.ipynb  make_cache.py  max_id_need_calc.npy  need_calc_1.npz  need_calc_2.npz  need_calc_3.npz  need_calc_4.npz  need_calc_5.npz  need_calc_change_x_2.npz  need_calc_change_x_3.npz  need_calc_change_x_4.npz  need_calc_change_x_5.npz  nn.ipynb  num_to_index_1.npz  num_to_index_2.npz  num_to_index_3.npz  num_to_index_4.npz  num_to_index_5.npz  num_to_index_6.npz  one_eq_calc_check_change_x_1.npz  one_eq_calc_check_change_x_2.npz  one_eq_calc_check_change_x_3.npz  one_eq_calc_check_change_x_4.npz  one_eq_calc_check_change_x_5.npz  operator_0.npy  (+1 more)
src/nb_sisso/test/: random_test.ipynb  util_for_test.py
