[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nb_sisso"
version = "0.2"
description = "説明"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
authors = [{name = "souno1218", email = "supinosaurusuz@gmail.com"},]
dependencies = ["numba>=0.60","numpy","numba_progress"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mypackage" = ["cache_folder/cache_*.npz",
               "cache_folder/num_to_index_*.npz",
               "cache_folder/need_calc_change_x_*.npz",
               "cache_folder/max_id_need_calc.npy"]


#!python -m build
