[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nb_sisso"
version = "0.4"
description = "説明"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
authors = [{name = "souno1218", email = "supinosaurusuz@gmail.com"},]
dependencies = [
    "numba>=0.60",
    "numpy",
    "numba_progress",
    "pandas>=2.2.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mypackage" = ["cache_folder/arr_len.npy",
               "cache_folder/cache_*.npz",
               "cache_folder/check_change_x_ones_*.npz",
               "cache_folder/need_calc_*.npz",
               "cache_folder/num_to_index_*.npz",
               "cache_folder/one_eq_calc_check_change_x_*.npz"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]


#!python -m build
#https://qiita.com/ieiringoo/items/4bef4fc9975803b08671
